--- a/_index.html
+++ b/_index.html
@@ -11,19 +11,19 @@
     <meta name="description" content="Necessites un espai de treball o per oferir els teus productes o serveis? A Sira10 trobaràs taules i espais per a treballar, vendre o fer tallers i activitats."/>
     <meta name="keywords" content="Coworking, Cotreball, Gràcia, Barcelona, Vila de Gracia, espais, espai, espais de cotreball, artesania, botiga, popups, popup store, showrooms, tallers, taller, activitats, sales, sala, lloguer, lloguer de sales per activitats"/>
     <meta name="author" content="xarop.com" />
-    <link rel="canonical" href="http://siradeu.com" />
+    <link rel="canonical" href="https://siradeu.com" />
 
     <meta property="og:locale" content="ca_ES" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Sira10 - El teu espai a la Vila de Gràcia :: Cotreball Barcelona" />
     <meta property="og:description" content="Necessites un espai de treball o per oferir els teus productes o serveis? A Sira10 trobaràs taules i espais per a treballar, vendre o fer tallers i activitats." />
-    <meta property="og:url" content="http://siradeu.com" />
+    <meta property="og:url" content="https://siradeu.com" />
     <meta property="og:site_name" content="Sira10 - El teu espai a la Vila de Gràcia :: Cotreball Barcelona" />
-    <meta property="og:image" content="http://siradeu.com/assets/images/favicon.png">
+    <meta property="og:image" content="https://siradeu.com/assets/images/favicon.png">
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="Necessites un espai de treball o per oferir els teus productes o serveis? A Sira10 trobaràs taules i espais per a treballar, vendre o fer tallers i activitats." />
-    <meta name="twitter:image" content="http://siradeu.com/assets/images/favicon.png" />
+    <meta name="twitter:image" content="https://siradeu.com/assets/images/favicon.png" />
     <meta name="twitter:title" content="Sira10 - El teu espai a la Vila de Gràcia :: Cotreball Barcelona" />
     <meta name="twitter:creator" content="@somespai" />
   
