--- a/sala/index.html
+++ b/sala/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <title>Sira10</title>
-    <link rel="shortcut icon" href="http://siradeu.com/assets/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="https://siradeu.com/assets/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <meta http-equiv="refresh" content="0; url=https://calendly.com/siradeu">
