--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                             <ul>
                                 <li><strong><i class="lni lni-checkmark-circle"></i> Espai flexible:</strong></li>
                                 <li><i class="lni lni-arrow-right"></i> Taula compartida</li>
-                                <li><i class="lni lni-arrow-right"></i> De 9 a 21h de dl a dv</li>
+                                <li><i class="lni lni-arrow-right"></i> De 9 a 19h de dl a dv</li>
                             </ul>
                         </div>
                         <div class="pricing-btn rounded-buttons text-center">
@@ -539,9 +539,9 @@
                         </div>
                         <div class="pricing-list">
                             <ul>
-                                <li><strong><i class="lni lni-checkmark-circle"></i> Espai flexible per hores:</strong></li>
+                                <li><strong><i class="lni lni-checkmark-circle"></i> Espai flexible temps parcial:</strong></li>
                                 <li><i class="lni lni-arrow-right"></i> <strong>Mitja jornada</strong>: 75 €/mes</li>
-                                <li><i class="lni lni-arrow-right"></i> <strong>50h/mes</strong> (1-2 dies/set): 50 €/mes</li>
+                                <li><i class="lni lni-arrow-right"></i> <strong>Bono 10 dies</strong>: 50 €</li>
                             </ul>
                         </div>
                         <div class="pricing-btn rounded-buttons text-center">
@@ -555,7 +555,7 @@
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-25">
                         <p class="text"><strong><a class=" page-scroll" href="#contact">Contacta amb nosaltres</a></strong> si vols que t'informem de les tarifes dels espais d'exposició,  botiga, per impartir tallers o altres activitats.</p>
-                        <p class="text"><small>Els preus inclouen IVA</small></p>
+                        <p class="text"><small>Els preus NO inclouen IVA</small></p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -580,6 +580,8 @@
                         <a href="mailto:siradeu@gmail.com">escriu-nos un <strong>email</strong></a> 
                         o un <a href="https://www.instagram.com/siradeu/">missatge per <strong>instagram</strong></a>, 
                         també pots contactar-nos per <a href="https://wa.me/34622664278"><strong>whatsapp</strong></a></p>
+
+                        <p>Aunta't al nostre botlletí i et farem arribar informació sobre tallers, activitats i novetats:</p>
 
 
 
