--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                       <div class="row">
                           <div class="col-lg-6">
                               <div class="slider-content">
-                                  <h1 class="title">Des de 50€ al mes</h1>
+                                  <h1 class="title">Des de 75€ al mes</h1>
                                   <p class="text">Ens adaptem al teu pressupost</p>
                                   <ul class="slider-btn rounded-buttons">
                                       <li><a class="main-btn rounded-one page-scroll" href="#pricing">Veure preus</a></li>
@@ -497,7 +497,7 @@
                     <div class="pricing-style mt-30">
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">Espai Fixe 24h</h5>
-                            <p class="month"><span class="price">125 </span>€/mes</p>
+                            <p class="month"><span class="price">150 </span>€/mes</p>
                         </div>
                         <div class="pricing-list">
                             <ul>
@@ -516,7 +516,7 @@
                     <div class="pricing-style mt-30">
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">Espai Flexible</h5>
-                            <p class="month"><span class="price">100 </span>€/mes</p>
+                            <p class="month"><span class="price">75 </span>€/mes</p>
                         </div>
                         <div class="pricing-list">
                             <ul>
@@ -534,14 +534,19 @@
                 <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="pricing-style mt-30">
                         <div class="pricing-header text-center">
-                            <h5 class="sub-title">Temps Parcial</h5>
-                            <p class="month">des de <span class="price">50 </span>€/mes</p>
+                            <h5 class="sub-title">Despeses incloses</h5>
+                            <p class="month">en totes les modalitats</p>
+                            <!-- <p class="month">des de <span class="price">50 </span>€/mes</p> -->
                         </div>
                         <div class="pricing-list">
                             <ul>
-                                <li><strong><i class="lni lni-checkmark-circle"></i> Espai flexible temps parcial:</strong></li>
+                                <!-- <li><strong><i class="lni lni-checkmark-circle"></i> Espai flexible temps parcial:</strong></li>
                                 <li><i class="lni lni-arrow-right"></i> <strong>Mitja jornada</strong>: 75 €/mes</li>
-                                <li><i class="lni lni-arrow-right"></i> <strong>Bono 10 dies</strong>: 50 €</li>
+                                <li><i class="lni lni-arrow-right"></i> <strong>Bono 10 dies</strong>: 50 €</li> -->
+                                <li><i class="lni lni-arrow-right"></i> Internet WIFI i cable (fibra 600)</li>
+                                <li><i class="lni lni-arrow-right"></i> Impresores A4 i A3</li>
+                                <li><i class="lni lni-arrow-right"></i> Cafetera, neveraa, microones, ...</li>
+                                <li><i class="lni lni-arrow-right"></i> Descontes en activitats i espais</li>
                             </ul>
                         </div>
                         <div class="pricing-btn rounded-buttons text-center">
@@ -555,7 +560,7 @@
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-25">
                         <p class="text"><strong><a class=" page-scroll" href="#contact">Contacta amb nosaltres</a></strong> si vols que t'informem de les tarifes dels espais d'exposició,  botiga, per impartir tallers o altres activitats.</p>
-                        <p class="text"><small>Els preus NO inclouen IVA</small></p>
+                        <p class="text"><small>Els preus inclouen IVA i despeses</small></p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
