--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
                     <div class="section-title text-center pb-25">
                         <h3 class="title">Preus</h3>
                         <p class="text">Sabem que l'economia és important per tu. Oferim espais fixes i flexibles per que trobis la teva millor opció.</p>
+                        <p class="text">Els nostres preus tenen l'IVA inclòs.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -501,9 +502,11 @@
                         </div>
                         <div class="pricing-list">
                             <ul>
-                                <li><strong><i class="lni lni-checkmark-circle"></i> Espai fixe 24/7:</strong></li>
+                                <li><i class="lni lni-arrow-right"></i> Zona privada </li>
                                 <li><i class="lni lni-arrow-right"></i> Taula gran </li>
+                                <li><i class="lni lni-arrow-right"></i> Accés 24h 7 dies per setmana </li>
                                 <li><i class="lni lni-arrow-right"></i> Deixa les teves coses</li>
+                                <li><i class="lni lni-arrow-right"></i> Descontes per grups</li>
                             </ul>
                         </div>
                         <div class="pricing-btn rounded-buttons text-center">
@@ -527,11 +530,12 @@
                                 <li><i class="lni lni-checkmark-circle"></i> Internet WIFI i cable (fibra 600)</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Llum i aigua</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Impresores A4 i A3</li>
+                                <li><i class="lni lni-checkmark-circle"></i> Sala re deunions (reserva prèvia)</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Pati i zona office</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Cafetera, nevera, microones, ...</li>
+                                <li><i class="lni lni-checkmark-circle"></i> Espai per la teva bicicleta</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Neteja i assegurança</li>
-                                <li><i class="lni lni-checkmark-circle"></i> Descontes en activitats i espais</li>
-                                <li><i class="lni lni-checkmark-circle"></i> IVA inclòs a la quota</li>
+                                <li><i class="lni lni-checkmark-circle"></i> Descontes en activitats i altres espais</li> 
                             </ul>
                         </div>
                         <!-- <div class="pricing-btn rounded-buttons text-center">
@@ -545,13 +549,15 @@
                     <div class="pricing-style mt-30">
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">Espai Flexible</h5>
-                            <p class="month"><span class="price">75 </span>€/mes</p>
+                            <p class="month">Des de <span class="price">50 </span>€/mes</p>
                         </div>
                         <div class="pricing-list">
                             <ul>
-                                <li><strong><i class="lni lni-checkmark-circle"></i> Espai flexible:</strong></li>
                                 <li><i class="lni lni-arrow-right"></i> Taula compartida</li>
                                 <li><i class="lni lni-arrow-right"></i> De 9 a 19h de dl a dv</li>
+                                <li><i class="lni lni-arrow-right"></i> 100€ Jornada sencera </li>
+                                <li><i class="lni lni-arrow-right"></i> 75€ Mitja jornada </li>
+                                <li><i class="lni lni-arrow-right"></i> 50€ Bonus 10 dies*</li>
                             </ul>
                         </div>
                         <div class="pricing-btn rounded-buttons text-center">
@@ -565,8 +571,10 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-25">
+                    
                         <p class="text"><strong><a class=" page-scroll" href="#contact">Contacta amb nosaltres</a></strong> si vols que t'informem de les tarifes dels espais d'exposició,  botiga, per impartir tallers o altres activitats.</p>
-                        <p class="text"><small>Els preus inclouen IVA i despeses</small></p>
+                        <p class="text">Els preus inclouen IVA i despeses</p>
+                        <!-- <p class="text"><small>* el bonus 10 dies caduca als 3 mesos</small></p> -->
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
