--- a/index.html
+++ b/index.html
@@ -549,15 +549,15 @@
                     <div class="pricing-style mt-30">
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">Espai Flexible</h5>
-                            <p class="month">Des de <span class="price">50 </span>€/mes</p>
+                            <p class="month">Des de <span class="price">55 </span>€/mes</p>
                         </div>
                         <div class="pricing-list">
                             <ul>
                                 <li><i class="lni lni-arrow-right"></i> Taula compartida</li>
                                 <li><i class="lni lni-arrow-right"></i> De 9 a 19h de dl a dv</li>
-                                <li><i class="lni lni-arrow-right"></i> 100€ Jornada sencera </li>
+                                <li><i class="lni lni-arrow-right"></i> 95€ Jornada sencera </li>
                                 <li><i class="lni lni-arrow-right"></i> 75€ Mitja jornada </li>
-                                <li><i class="lni lni-arrow-right"></i> 50€ Bonus 10 dies*</li>
+                                <li><i class="lni lni-arrow-right"></i> 55€ Bonus 10 dies</li>
                             </ul>
                         </div>
                         <div class="pricing-btn rounded-buttons text-center">
@@ -574,7 +574,7 @@
                     
                         <p class="text"><strong><a class=" page-scroll" href="#contact">Contacta amb nosaltres</a></strong> si vols que t'informem de les tarifes dels espais d'exposició,  botiga, per impartir tallers o altres activitats.</p>
                         <p class="text">Els preus inclouen IVA i despeses</p>
-                        <!-- <p class="text"><small>* el bonus 10 dies caduca als 3 mesos</small></p> -->
+                        <p class="text">Descontes per grups de mes d'una persona.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
