--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                                 <li><i class="lni lni-arrow-right"></i> De 9 a 19h de dl a dv</li>
                                 <li><i class="lni lni-arrow-right"></i> 95€ Jornada sencera </li>
                                 <li><i class="lni lni-arrow-right"></i> 75€ Mitja jornada </li>
-                                <li><i class="lni lni-arrow-right"></i> 55€ Bonus 10 dies</li>
+                                <li><i class="lni lni-arrow-right"></i> 55€ 10 dies</li>
                             </ul>
                         </div>
                         <div class="pricing-btn rounded-buttons text-center">
