--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                       <div class="row">
                           <div class="col-lg-6">
                               <div class="slider-content">
-                                  <h1 class="title">Des de 75€ al mes</h1>
+                                  <h1 class="title">Des de 55€ al mes</h1>
                                   <p class="text">Ens adaptem al teu pressupost</p>
                                   <ul class="slider-btn rounded-buttons">
                                       <li><a class="main-btn rounded-one page-scroll" href="#pricing">Veure preus</a></li>
@@ -555,9 +555,9 @@
                             <ul>
                                 <li><i class="lni lni-arrow-right"></i> Taula compartida</li>
                                 <li><i class="lni lni-arrow-right"></i> De 9 a 19h de dl a dv</li>
-                                <li><i class="lni lni-arrow-right"></i> 95€ Jornada sencera </li>
-                                <li><i class="lni lni-arrow-right"></i> 75€ Mitja jornada </li>
-                                <li><i class="lni lni-arrow-right"></i> 55€ 10 dies</li>
+                                <li><i class="lni lni-target"></i> 95€ Jornada sencera </li>
+                                <li><i class="lni lni-target"></i> 75€ Mitja jornada </li>
+                                <li><i class="lni lni-target"></i> 55€ "Bono" 10 dies</li>
                             </ul>
                         </div>
                         <div class="pricing-btn rounded-buttons text-center">
