--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                                 <li><i class="lni lni-checkmark-circle"></i> Internet WIFI i cable (fibra 600)</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Llum i aigua</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Impresores A4 i A3</li>
-                                <li><i class="lni lni-checkmark-circle"></i> Sala re deunions (reserva prèvia)</li>
+                                <li><i class="lni lni-checkmark-circle"></i> Sala de reunions (reserva prèvia)</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Pati i zona office</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Cafetera, nevera, microones, ...</li>
                                 <li><i class="lni lni-checkmark-circle"></i> Espai per la teva bicicleta</li>
