--- a/tarifes/index.html
+++ b/tarifes/index.html
@@ -730,8 +730,8 @@
                 <td class="s3" dir="ltr">Minim 2h</td>
                 <td class="s18" dir="ltr">-</td>
                 <td class="s18" dir="ltr">-</td>
-                <td class="s2" dir="ltr">40</td>
-                <td class="s2" dir="ltr">15</td>
+                <td class="s2" dir="ltr">50</td>
+                <td class="s2" dir="ltr">20</td>
                 <td class="s4" dir="ltr">de divendres a diumenge *</td>
                 <td class="s4" dir="ltr"></td>
                 <td class="s4"></td>
@@ -749,7 +749,7 @@
                 <td class="s20"></td>
                 <td class="s21"></td>
                 <td class="s21"></td>
-                <td class="s2" dir="ltr">5</td>
+                <td class="s2" dir="ltr">5 a 10</td>
                 <td class="s4" dir="ltr">per reserva</td>
                 <td class="s4"></td>
                 <td class="s4"></td>
@@ -770,7 +770,7 @@
                 <td class="s4"></td>
                 <td class="s3"></td>
             </tr>
-            <tr style="height: 20px">
+            <!-- <tr style="height: 20px">
                 <th id="473138206R20" style="height: 20px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 20px">21</div>
                 </th>
@@ -830,7 +830,7 @@
                 <td class="s4" dir="ltr"></td>
                 <td class="s4"></td>
                 <td class="s3"></td>
-            </tr>
+            </tr> 
             <tr style="height: 20px">
                 <th id="473138206R24" style="height: 20px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 20px">25</div>
@@ -846,6 +846,7 @@
                 <td class="s4"></td>
                 <td class="s3"></td>
             </tr>
+            -->
             <tr style="height: 20px">
                 <th id="473138206R25" style="height: 20px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 20px">26</div>
