--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                             <a class="solid btn btn-whatsapp" href="https://wa.me/34622664278" target="_blank"><i class="lni lni-whatsapp"></i> <span>Contactans ara per Whatsapp</span></a>
                         </h2>
 
-                        <p>Aunta't al nostre botlletí i et farem arribar informació sobre tallers, activitats i novetats:</p>
+                        <p>Apunta't al nostre botlletí i et farem arribar informació sobre tallers, activitats i novetats:</p>
 
 
 
