add photos botiga

--- a/index.html
+++ b/index.html
@@ -631,6 +631,8 @@
 
 <!--End mc_embed_signup-->
 
+<p><a href="https://us10.campaign-archive.com/home/?u=710c14e672275063bc9eb98f7&id=bdc5520a24" target="_blank">Veure boletins anteriors.</a></p>
+
 
 
                     </div> <!-- section title -->
