--- a/tarifes/index.html
+++ b/tarifes/index.html
@@ -471,7 +471,7 @@
                     <div class="row-header-wrapper" style="line-height: 20px">1</div>
                 </th>
                 <td class="s0" dir="ltr">Sira10</td>
-                <td class="s1" dir="ltr">TARIFES 2022</td>
+                <td class="s1" dir="ltr">TARIFES 2023</td>
                 <td class="s2" dir="ltr"></td>
                 <td class="s3"></td>
                 <td class="s3"></td>
@@ -730,8 +730,8 @@
                 <td class="s3" dir="ltr">Minim 2h</td>
                 <td class="s18" dir="ltr">-</td>
                 <td class="s18" dir="ltr">-</td>
-                <td class="s2" dir="ltr">40</td>
-                <td class="s2" dir="ltr">20</td>
+                <td class="s2" dir="ltr">50</td>
+                <td class="s2" dir="ltr">25</td>
                 <td class="s4" dir="ltr">de divendres a diumenge *</td>
                 <td class="s4" dir="ltr"></td>
                 <td class="s4"></td>
@@ -760,9 +760,10 @@
                 <th id="473138206R18b" style="height: 20px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 20px">19</div>
                 </th>
-                <td class="s0" dir="ltr">Anulacions</td>
+                <td class="s0" dir="ltr">Reserva i anulacions</td>
                 <td class="s19 softmerge" dir="ltr">
-                    <div class="softmerge-inner" style="width:357px;left:-1px">50% anulacions amb menys de 72h </div>
+                    <div class="softmerge-inner" style="width:357px;left:-1px">50% pagament per conformar reserva. 50%
+                        anulacions amb menys de 1 setmana. 100% en menys de 72h </div>
                 </td>
                 <td class="s20"></td>
                 <td class="s21"></td>
@@ -866,7 +867,7 @@
                 <td class="s3"></td>
             </tr>
             -->
-            <tr style="height: 20px">
+            <!--<tr style="height: 20px">
                 <th id="473138206R25" style="height: 20px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 20px">26</div>
                 </th>
@@ -928,7 +929,7 @@
                 <td class="s27" dir="ltr">20</td>
                 <td class="s3" dir="ltr"> </td>
             </tr>
-            <tr style="height: 20px">
+             <tr style="height: 20px">
                 <th id="473138206R29" style="height: 20px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 20px">30</div>
                 </th>
@@ -947,7 +948,7 @@
                 <th id="473138206R30" style="height: 20px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 20px">31</div>
                 </th>
-                <td class="s0" dir="ltr">Showroom venda</td>
+                <td class="s0" dir="ltr">Showroom</td>
                 <td class="s3" dir="ltr">A comisió 70/30</td>
                 <td class="s2" dir="ltr">30%</td>
                 <td class="s15"></td>
@@ -962,7 +963,7 @@
                 <th id="473138206R31" style="height: 20px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 20px">32</div>
                 </th>
-                <td class="s28" dir="ltr">Showroom expo</td>
+                <td class="s28" dir="ltr"></td>
                 <td class="s29" dir="ltr">Preu mensual. Des de </td>
                 <td class="s30" dir="ltr">10</td>
                 <td class="s31">2,10</td>
@@ -972,7 +973,7 @@
                 <td class="s26" dir="ltr">DE 500-1000</td>
                 <td class="s27" dir="ltr">35</td>
                 <td class="s3"></td>
-            </tr>
+            </tr> 
             <tr style="height: 20px">
                 <th id="473138206R32" style="height: 20px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 20px">33</div>
@@ -987,7 +988,7 @@
                 <td class="s26" dir="ltr">MÉS DE 1000</td>
                 <td class="s27" dir="ltr">40</td>
                 <td class="s3"></td>
-            </tr>
+            </tr> -->
             <tr style="height: 20px">
                 <th id="473138206R33" style="height: 20px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 20px">34</div>
@@ -1010,7 +1011,7 @@
                 <td class="s0" dir="ltr">Cap de setmana</td>
                 <td class="s3" dir="ltr">minim 4h</td>
                 <td class="s2" dir="ltr">150</td>
-                <td class="s2" dir="ltr">25</td>
+                <td class="s2" dir="ltr">30</td>
                 <td class="s3"></td>
                 <td class="s3"></td>
                 <td class="s4"></td>
